--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:norma
 </head>
 <body>
 <h1>i might do something with this later</h1>
-<p>emails</p>
+<p>im using this for email domains!</p>
 </body>
 </html>
