--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 <!-- HTML Codes by Quackit.com -->
 <title>
-</title>
+coderunners cool website</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="keywords" content="code, fun, website, gaming, emails, cool">
+<meta name="description" content="the offical website of coderunner1">
 <style>
 body {background-color:#ffffff;background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
 h1{font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
@@ -12,7 +14,7 @@ p {font-family:Georgia, serif;font-size:14px;font-style:normal;font-weight:norma
 </style>
 </head>
 <body>
-<h1>i might do something with this later</h1>
-<p>im using this for email domains!</p>
+<h1>I need to actually code this, but this is live.</h1>
+<p>there are just emails with my domain right now.</p>
 </body>
 </html>
