--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <!-- HTML Codes by Quackit.com -->
 <title>
-coderunners cool website</title>
+coderunner.me</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="keywords" content="code, fun, website, gaming, emails, cool">
 <meta name="description" content="the offical website of coderunner1">
