--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 coderunner.me</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="keywords" content="code, fun, website, gaming, emails, cool">
-<meta name="description" content="the offical website of coderunner1">
+<meta name="description" content="a website">
 <style>
 body {background-color:#ffffff;background-repeat:no-repeat;background-position:top left;background-attachment:fixed;}
 h1{font-family:Arial, sans-serif;color:#000000;background-color:#ffffff;}
