--- a/editable.html
+++ b/editable.html
@@ -64,9 +64,9 @@
 <script>
   var Something =$("password").val();
 
-  if(Something == "aaaa")
+  if(Something == "google")
   {
-  window.location.href = 'google.com'; //Will take you to URL1
+  window.location.href = 'https://www.google.com'; //Will take you to URL1
   } 
 </script></div></div></div>
     </section><section data-silex-type="container-element" class="container-element editable-style silex-id-1478366450713-3 section-element prevent-resizable page-page-1 paged-element" data-silex-id="silex-id-1478366450713-3">
@@ -76,4 +76,5 @@
                 <div class="silex-element-content normal"><p>Powered by <a href="https://www.silex.me/" target="_blank" title="Silex website builder,  free and open source" linktype="LinkTypeExternal">Silex website builder</a></p></div>
             </div>
         </div>
-    </section><section data-silex-type="container-element" class="editable-style section-element silex-id-1478366444112-1 page-page-1 paged-element" data-silex-id="silex-id-1478366444112-1"><div data-silex-type="container-element" class="editable-style container-element silex-id-1478366444112-0 website-width" data-silex-id="silex-id-1478366444112-0" title=""></div></section><grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration></body></html>
+    </section><section data-silex-type="container-element" class="editable-style section-element silex-id-1478366444112-1 page-page-1 paged-element" data-silex-id="silex-id-1478366444112-1"><div data-silex-type="container-element" class="editable-style container-element silex-id-1478366444112-0 website-width" data-silex-id="silex-id-1478366444112-0" title=""></div></section><grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration>
+</body></html>
