--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <title>welcome to coderunner.me, enter your password here</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script>
-            var password = "password";
-            var url = "https://www.google.com";
+            var password = "coderunner";
+            var url = "https://www.coderunner.me";
             var password2 = "password2";
             var url2 = "https://www.youtube.com";
             var password3 = "password3";
