--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 
 <html>
     <head>
-        <title>welcome to coderunner.me, enter your password here</title>
+        <title>coderunner.me</title>
+        <h1>Welcome to coderunner.me, enter your password here!</h1>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script>
             var password = "coderunner";
