--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
-<!-- make a website where you can enter a password and go to a url related to that password-->
-<!-- store the passwords client side-->
-<!-- if you get the password right the password is tied to a website url that is set by a checker in the code-->
-
 <html>
     <head>
-        <title>coderunner.me</title>
-        <h1>Welcome to coderunner.me, enter your password here!</h1>
+        <title>password</title>
+        <h1>Welcome to coderunner.me!</h1>
+    <head>
+        <p>Enter your password here to go to the coresponding page</p>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script>
-            var password = "coderunner";
-            var url = "https://www.coderunner.me";
+            var password = "password";
+            var url = "https://www.google.com";
             var password2 = "password2";
             var url2 = "https://www.youtube.com";
             var password3 = "password3";
