--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <p>Enter your password here to go to the coresponding page</p>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script>
-            var password = "password";
-            var url = "https://www.google.com";
+            var password = "pagetest";
+            var url = "https://www.coderunner.me/test.html";
             var password2 = "password2";
             var url2 = "https://www.youtube.com";
             var password3 = "password3";
