--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <script>
             var password = "pagetest";
             var url = "https://www.coderunner.me/test.html";
-            var password2 = "password2";
-            var url2 = "https://www.youtube.com";
+            var password2 = "filesharing";
+            var url2 = "https://www.coderunner.me/filesharing.html";
             var password3 = "password3";
             var url3 = "https://www.reddit.com";
             var password4 = "password4";
