--- a/ads.html
+++ b/ads.html
@@ -1,3 +1,9 @@
+<!-- make a page with the header "adblock tester page"-->
+<!-- have the page be filled with advertisments from the internet-->
+
+start of the code
+
+
 </html>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4165556588654806"
      crossorigin="anonymous"></script>
@@ -6,5 +12,35 @@
         <h2> If you dont see ads you have adblock.</h2>
     </head>
     <body>
+        <div class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4165556588654806"
+     data-ad-slot="1234567890"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></div>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+
+        <div class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-4165556588654806"
+        data-ad-slot="1234567890"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></div>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+
+        <div class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-4165556588654806"
+        data-ad-slot="1234567890"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></div>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+        
     </body>
 </html>
