--- a/ads.html
+++ b/ads.html
@@ -6,35 +6,17 @@
         <h2> If you dont see ads you have adblock.</h2>
     </head>
     <body>
-        <div class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-4165556588654806"
-     data-ad-slot="1234567890"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></div>
-        <script>
-             (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4165556588654806"
+          crossorigin="anonymous"></script>
+<!-- adunittest -->
+     <ins class="adsbygoogle"
+          style="display:inline-block;width:728px;height:90px"
+          data-ad-client="ca-pub-4165556588654806"
+          data-ad-slot="6720844767"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
-        <div class="adsbygoogle"
-        style="display:block"
-        data-ad-client="ca-pub-4165556588654806"
-        data-ad-slot="1234567890"
-        data-ad-format="auto"
-        data-full-width-responsive="true"></div>
-        <script>
-             (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-
-        <div class="adsbygoogle"
-        style="display:block"
-        data-ad-client="ca-pub-4165556588654806"
-        data-ad-slot="1234567890"
-        data-ad-format="auto"
-        data-full-width-responsive="true"></div>
-        <script>
-             (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
         
     </body>
 </html>
