--- a/ads.html
+++ b/ads.html
@@ -6,17 +6,17 @@
         <h2> If you dont see ads you have adblock.</h2>
     </head>
     <body>
+         <p>There is a ad under this text</p>
      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4165556588654806"
           crossorigin="anonymous"></script>
 <!-- adunittest -->
-     <ins class="adsbygoogle"
-          style="display:inline-block;width:728px;height:90px"
-          data-ad-client="ca-pub-4165556588654806"
-          data-ad-slot="6720844767"></ins>
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-4165556588654806"
+     data-ad-slot="6720844767"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-
         
     </body>
 </html>
