--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             var url = "https://www.coderunner.me/test.html";
             var password2 = "filesharing";
             var url2 = "https://www.coderunner.me/filesharing.html";
-            var password3 = "password3";
+            var password3 = "adlimbo";
             var url3 = "https://www.reddit.com";
             var password4 = "password4";
             var url4 = "https://www.facebook.com";
