--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             var password2 = "filesharing";
             var url2 = "https://www.coderunner.me/filesharing.html";
             var password3 = "adlimbo";
-            var url3 = "https://www.reddit.com";
+            var url3 = "https://www.coderunner.me/ads.html";
             var password4 = "password4";
             var url4 = "https://www.facebook.com";
             var password5 = "password5";
