--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <head>
         <title>password</title>
         <h1>Welcome to coderunner.me!</h1>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4165556588654806"
+     crossorigin="anonymous"></script>
     <head>
         <p>Enter your password here to go to the coresponding page</p>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
