--- a/ads.html
+++ b/ads.html
@@ -4,6 +4,8 @@
     <head>
         <h1> AdBlock tester, if you see ads you dont have adblock.</h1>
         <h2> If you dont see ads you have adblock.</h2>
+         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4165556588654806"
+     crossorigin="anonymous"></script>
     </head>
     <body>
          <p>There is a ad under this text</p>
