--- a/ads.html
+++ b/ads.html
@@ -2,7 +2,7 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4165556588654806"
      crossorigin="anonymous"></script>
     <head>
-        <h1>(THIS PAGE ISNT WORKING YET, IT NEEDS TO BE APPROVED FOR ADS) AdBlock tester, if you see ads you dont have adblock. (THIS PAGE ISNT WORKING YET, IT NEEDS TO BE APPROVED FOR ADS)</h1>
+        <h1>AdBlock tester, if you see ads you dont have adblock. (THIS PAGE ISNT WORKING YET, IT NEEDS TO BE APPROVED FOR ADS)</h1>
         <h2> If you dont see ads you have adblock.</h2>
          <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4165556588654806"
      crossorigin="anonymous"></script>
