--- a/haleyisstupid.html
+++ b/haleyisstupid.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html>
   <body>
     <h1> I like men </h1>
-    <p1> it is very true </p1>
+    <p> it is very true </p>
   </body>
 </html>
