--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 
         <input type="text" id="input">
         <button onclick="check()">check</button>
+        <a href="coderunner.me/quotes">Click here to go to quotes page.</a>
         </body>
 </html>
 
