--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
         <input type="text" id="input">
         <button onclick="check()">check</button>
-        <a href="https://www.coderunner.me/quotes">Click here to go to quotes page.</a>
+        <a href="https://www.coderunner.me/quotes.html">Click here to go to quotes page.</a>
         </body>
 </html>
 
