--- a/quotes.html
+++ b/quotes.html
@@ -4,7 +4,8 @@
     <title>Quotes</title>
   </head>
   <body> 
-    <h1>This page is under construction!</h1>
+    <h1>Questonable quotes</h1>
     <p1></p1>
+    <a> href="https://www.coderunner.me/index.html" url="Click to return to main page"</a>
   </body>
 </html>
