--- a/quotes.html
+++ b/quotes.html
@@ -6,6 +6,6 @@
   <body> 
     <h1>Questonable quotes</h1>
     <p1></p1>
-    <a href="https://www.coderunner.me/index.html"> url="Click to return to main page"</a>
+    <a href="https://www.coderunner.me/index.html">Click to return to main page</a>
   </body>
 </html>
