--- a/quotes.html
+++ b/quotes.html
@@ -5,7 +5,9 @@
   </head>
   <body> 
     <h1>Questonable quotes</h1>
-    <p1></p1>
+    <p1>Xavier Medlock:
+    "Why be scared of abortion when you could be scared of deportion"
+    </p1>
     <a href="https://www.coderunner.me/index.html">Click to return to main page</a>
   </body>
 </html>
