--- a/quotes.html
+++ b/quotes.html
@@ -6,7 +6,7 @@
   <body> 
     <h1>Questonable quotes</h1>
     <p1>Xavier Medlock:
-    <br> "Why be scared of abortion when you could be scared of deportion"
+    <br> "Why be scared of abortion when you could be scared of deportion" <br>
     </p1>
     <a href="https://www.coderunner.me/index.html">Click to return to main page</a>
   </body>
