--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 
         <input type="text" id="input">
         <button onclick="check()">check</button>
+        <p11> <br> Quick links!: <br> </p11>
         <a href="https://www.coderunner.me/quotes.html">Click here to go to quotes page.</a>
         </body>
 </html>
