--- a/index.html
+++ b/index.html
@@ -132,5 +132,10 @@
         <p11> <br> Quick links!: <br> </p11>
         <a href="https://www.coderunner.me/quotes.html">Click here to go to quotes page.</a>
         </body>
+        <footer> 
+            <p1> (not) © Jacob Crocker 2023</p1>
+            <button oneclick="javascript: window.location.href='mailto:admin@coderunner.me';">Contact Me!</button>
+            
+        </footer>
 </html>
 
