--- a/blocked.html
+++ b/blocked.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>IP BLOCKED</title>
-    <h1 style="color:Tomato;">Your ip is blocked from viewing this page.</h1>
+    <h1 style="color:Tomato;">Your IP address is blocked from viewing this page.</h1>
   </head>
   <body> 
-    <p1>Please contact me or use a authorised IP address.</p1>
+    <p1>Please contact me or use an authorized IP address.</p1>
     <a href="mailto:admin@coderunner.me"><br>Contact me!</a>
   </body>
 
