--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </body>
         <footer> 
             <p1> (not) © Jacob Crocker 2023</p1>
-            <button oneclick="javascript: window.location.href='mailto:admin@coderunner.me';">Contact Me!</button>
+            <a href="mailto:admin@coderunner.me">Contact me!</a>
             
         </footer>
 </html>
